--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,19 +12,15 @@
     <!-- *** Required permissions *** -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <!-- *** Recommended permissions *** -->
-
-    <!-- Enables location based targeted ads -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <!-- USE FINE_LOCATION FOR GPS ENABLED APPS -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <!-- *** Optional permissions for special ads *** -->
 
     <!-- This enables vibrating ads -->
-    <uses-permission android:name="android.permission.VIBRATE" />
+    <!-- <uses-permission android:name="android.permission.VIBRATE" /> -->
 
     <!-- Enables click-to-calendar ads -->
     <!-- <uses-permission android:name="android.permission.READ_CALENDAR" /> -->
