--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 13 13:53:43 CET 2015
-sdk.dir=C\:\\Users\\gohl2\\AppData\\Local\\Android\\sdk
+#Mon Jul 03 11:53:54 CEST 2017
+sdk.dir=C\:\\Users\\proeg\\AppData\\Local\\Android\\Sdk
