--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jul 03 11:53:54 CEST 2017
-sdk.dir=C\:\\Users\\proeg\\AppData\\Local\\Android\\Sdk
+#Mon Aug 21 09:39:58 CEST 2017
+sdk.dir=C\:\\Users\\gohl2\\AppData\\Local\\Android\\sdk
