--- a/exampleApp/build.gradle
+++ b/exampleApp/build.gradle
@@ -7,6 +7,7 @@ android {
     defaultConfig {
         applicationId "de.guj.ems.exampleapp"
         targetSdkVersion 25
+        minSdkVersion 18
     }
 
     buildTypes {
